# api/swagger/swagger.yaml
@@ -161,6 +161,102 @@ paths:
             description: Error
             schema:
               $ref: "#/definitions/ErrorResponse"
+  /users:
+      x-swagger-router-controller: user
+      get:
+        operationId: readUsers
+        responses:
+          "200":
+            description: Success
+            schema:
+              $ref: "#/definitions/UserListResponse"
+          default:
+            description: Error
+            schema:
+              $ref: "#/definitions/ErrorResponse"
+      post:
+        operationId: createUser
+        parameters:
+          - name: user
+            in: body
+            required: true
+            schema:
+              $ref: "#/definitions/User"
+        responses:
+          "200":
+            description: Success
+            schema:
+              $ref: "#/definitions/UserResponse"
+          default:
+            description: Error
+            schema:
+              $ref: "#/definitions/ErrorResponse"
+      delete:
+        operationId: logout
+        responses:
+          "200":
+            description: Success
+            schema:
+              type: string
+          default:
+            description: Error
+            schema:
+              $ref: "#/definitions/ErrorResponse"
+  /users/{id}:
+      x-swagger-router-controller: user
+      get:
+        operationId: readUser
+        parameters:
+          - name: id
+            type: string
+            in: path
+            required: true
+        responses:
+          "200":
+            description: Success
+            schema:
+              $ref: "#/definitions/UserResponse"
+          default:
+            description: Error
+            schema:
+              $ref: "#/definitions/ErrorResponse"
+      put:
+        operationId: updateUser
+        parameters:
+          - name: id
+            type: string
+            in: path
+            required: true
+          - name: user
+            in: body
+            required: true
+            schema:
+              $ref: "#/definitions/User"
+        responses:
+          "200":
+            description: Success
+            schema:
+              $ref: "#/definitions/UserResponse"
+          default:
+            description: Error
+            schema:
+              $ref: "#/definitions/ErrorResponse"
+      delete:
+        operationId: deleteUser
+        parameters:
+          - name: id
+            type: string
+            in: path
+            required: true
+        responses:
+          "200":
+            description: Success
+            schema:
+              $ref: "#/definitions/UserResponse"
+          default:
+            description: Error
+            schema:
+              $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
@@ -199,6 +295,28 @@ definitions:
       endDateTime:
         type: string
         format: date-time
+  UserResponse:
+    type: object
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      password:
+        type: string
+  UserListResponse:
+    properties:
+      users:
+        type: array
+        items:
+          $ref: "#/definitions/UserResponse"
+  User:
+    type: object
+    properties:
+      name:
+        type: string
+      password:
+        type: string
   ErrorResponse:
     required:
       - message
